--- a/fishfood.cabal
+++ b/fishfood.cabal
@@ -66,10 +66,11 @@ Library
         base == 4.*,
         Cabal >= 1.10,
         containers,
+        data-default,
         directory,
         factory >= 0.2.0.5,
         mtl,
-        toolshed >= 0.16
+        toolshed >= 0.17
 
     if impl(ghc >= 7.4.1)
         GHC-prof-options:	-prof -fprof-auto -fprof-cafs
@@ -88,9 +89,10 @@ Executable fishfood
     Build-depends:
         base == 4.*,
         Cabal >= 1.10,
+        data-default,
         fishfood,
         mtl,
-        toolshed >= 0.16
+        toolshed >= 0.17
 
     if impl(ghc >= 7.4.1)
         GHC-prof-options:	-prof -fprof-auto -fprof-cafs
@@ -123,5 +125,5 @@ Test-Suite quickCheck
         fishfood,
         mtl,
         QuickCheck,
-        toolshed >= 0.16
+        toolshed >= 0.17
 
