--- a/fishfood.cabal
+++ b/fishfood.cabal
@@ -25,7 +25,7 @@ Synopsis:	Calculates file-size frequency-distribution.
 Build-type:	Simple
 Description:	Counts the number of files in a set of bins, each of which holds only those files which fall within a specific size-interval.
 Category:	Utils
-Tested-with:	GHC == 7.4, GHC == 7.6, GHC == 7.8, GHC == 7.10.1
+Tested-with:	GHC == 7.4, GHC == 7.6, GHC == 7.8, GHC == 7.10.1, GHC == 8.0.1
 Homepage:	http://functionalley.eu
 Maintainer:	mailto:fishfood@functionalley.eu
 Bug-reports:	mailto:fishfood@functionalley.eu
@@ -73,9 +73,9 @@ Library
         toolshed >= 0.17
 
     if impl(ghc >= 7.4.1)
-        GHC-prof-options:	-prof -fprof-auto -fprof-cafs
+        GHC-prof-options:	-fprof-auto -fprof-cafs
     else
-        GHC-prof-options:	-prof -auto-all -caf-all
+        GHC-prof-options:	-auto-all -caf-all
 
     if impl(ghc >= 7.0) && flag(llvm)
         GHC-options:	-fllvm
@@ -95,9 +95,9 @@ Executable fishfood
         toolshed >= 0.17
 
     if impl(ghc >= 7.4.1)
-        GHC-prof-options:	-prof -fprof-auto -fprof-cafs
+        GHC-prof-options:	-fprof-auto -fprof-cafs
     else
-        GHC-prof-options:	-prof -auto-all -caf-all
+        GHC-prof-options:	-auto-all -caf-all
 
     if impl(ghc >= 7.0)
         GHC-options:	-rtsopts
