--- a/fishfood.cabal
+++ b/fishfood.cabal
@@ -72,17 +72,17 @@ Library
         mtl,
         toolshed >= 0.17
 
-    if impl(ghc >= 7.4.1)
-        GHC-prof-options:	-fprof-auto -fprof-cafs
-    else
-        GHC-prof-options:	-auto-all -caf-all
-
     if impl(ghc >= 7.0)
         if flag(llvm)
             GHC-options:	-fllvm
 
-        if impl(ghc >= 8.0)
-            GHC-options:	-Wredundant-constraints
+        if impl(ghc >= 7.4.1)
+            GHC-prof-options:	-fprof-auto -fprof-cafs
+    
+            if impl(ghc >= 8.0)
+                GHC-options:	-j -Wredundant-constraints
+        else
+            GHC-prof-options:	-auto-all -caf-all
 
 Executable fishfood
     Default-language:	Haskell2010
@@ -98,19 +98,19 @@ Executable fishfood
         mtl,
         toolshed >= 0.17
 
-    if impl(ghc >= 7.4.1)
-        GHC-prof-options:	-fprof-auto -fprof-cafs
-    else
-        GHC-prof-options:	-auto-all -caf-all
-
     if impl(ghc >= 7.0)
         GHC-options:	-rtsopts
 
         if flag(llvm)
             GHC-options:	-fllvm
 
-        if impl(ghc >= 8.0)
-            GHC-options:	-Wredundant-constraints
+        if impl(ghc >= 7.4.1)
+            GHC-prof-options:	-fprof-auto -fprof-cafs
+    
+            if impl(ghc >= 8.0)
+                GHC-options:	-j -Wredundant-constraints
+        else
+            GHC-prof-options:	-auto-all -caf-all
 
 Test-Suite test
     Default-language:	Haskell2010
@@ -135,4 +135,4 @@ Test-Suite test
         toolshed >= 0.17
 
     if impl(ghc >= 8.0)
-        GHC-options:	-Wredundant-constraints
+        GHC-options:	-j -Wredundant-constraints
