--- a/debian/DEBIAN/control
+++ b/debian/DEBIAN/control
@@ -7,6 +7,6 @@ Depends:	libc6
 Installed-size:	2082
 Maintainer:	Dr. Alistair Ward <fishfood@functionalley.eu>
 Provides:
-Homepage:	http://functionalley.eu
+Homepage:	https://functionalley.eu
 Description:	Counts the number of files in a set of bins, each of which holds only those files which fall within a specific size-interval.
 
