--- a/fishfood.cabal
+++ b/fishfood.cabal
@@ -26,7 +26,7 @@ Build-type:	Simple
 Description:	Counts the number of files in a set of bins, each of which holds only those files which fall within a specific size-interval.
 Category:	Utils
 Tested-with:	GHC == 7.4, GHC == 7.6, GHC == 7.8, GHC == 7.10, GHC == 8.0
-Homepage:	http://functionalley.eu
+Homepage:	https://functionalley.eu
 Maintainer:	mailto:fishfood@functionalley.eu
 Bug-reports:	mailto:fishfood@functionalley.eu
 
