--- a/debian/DEBIAN/control
+++ b/debian/DEBIAN/control
@@ -1,12 +1,12 @@
 Package:	fishfood
-Version:	0.0.1.8-1
+Version:	0.0.1.9-1
 Section:	utils
 Priority:	optional
 Architecture:	amd64
 Depends:	libc6
 Installed-size:	2082
-Maintainer:	Dr. Alistair Ward <fishfood@functionalley.eu>
+Maintainer:	Dr. Alistair Ward <fishfood@functionalley.com>
 Provides:
-Homepage:	https://functionalley.eu
+Homepage:	https://functionalley.com
 Description:	Counts the number of files in a set of bins, each of which holds only those files which fall within a specific size-interval.
 
