--- a/fishfood.cabal
+++ b/fishfood.cabal
@@ -14,7 +14,7 @@
 -- along with FishFood.  If not, see <http://www.gnu.org/licenses/>.
 
 Name:		fishfood
-Version:	0.0.1.8
+Version:	0.0.1.9
 Cabal-version:	>= 1.10
 Copyright:	(C) 2013-2015 Dr. Alistair Ward
 License:	GPL
@@ -25,10 +25,10 @@ Synopsis:	Calculates file-size frequency-distribution.
 Build-type:	Simple
 Description:	Counts the number of files in a set of bins, each of which holds only those files which fall within a specific size-interval.
 Category:	Utils
-Tested-with:	GHC == 7.4, GHC == 7.6, GHC == 7.8, GHC == 7.10, GHC == 8.0
-Homepage:	https://functionalley.eu
-Maintainer:	mailto:fishfood@functionalley.eu
-Bug-reports:	mailto:fishfood@functionalley.eu
+Tested-with:	GHC == 7.4, GHC == 7.6, GHC == 7.8, GHC == 7.10, GHC == 8.0, GHC == 8.2, GHC == 8.4, GHC == 8.6
+Homepage:	https://functionalley.com
+Maintainer:	mailto:fishfood@functionalley.com
+Bug-reports:	mailto:fishfood@functionalley.com
 
 -- None of these files are needed at run-time.
 Extra-source-files:
