--- a/fishfood.cabal
+++ b/fishfood.cabal
@@ -80,7 +80,7 @@ Library
             GHC-prof-options:	-fprof-auto -fprof-cafs
     
             if impl(ghc >= 8.0)
-                GHC-options:	-j -Wredundant-constraints
+                GHC-options:	-Wredundant-constraints
         else
             GHC-prof-options:	-auto-all -caf-all
 
@@ -108,7 +108,7 @@ Executable fishfood
             GHC-prof-options:	-fprof-auto -fprof-cafs
     
             if impl(ghc >= 8.0)
-                GHC-options:	-j -Wredundant-constraints
+                GHC-options:	-Wredundant-constraints
         else
             GHC-prof-options:	-auto-all -caf-all
 
@@ -135,4 +135,4 @@ Test-Suite test
         toolshed >= 0.17
 
     if impl(ghc >= 8.0)
-        GHC-options:	-j -Wredundant-constraints
+        GHC-options:	-Wredundant-constraints
